--- a/app/views/main/search_view.erb
+++ b/app/views/main/search_view.erb
@@ -1,7 +1,16 @@
 
 
 
+
+
+
+
+
+
+
 <body style="background:rgba(0,0,0,0.04)">
+
+    
 <ul class="nav nav-tabs">
              <li role="presentation" class="active"><a href="#" style="font-weight: bold;background-color: #90b236; color:white">일반사용자</a></li>
               <li role="presentation"><a href="" data-toggle="modal" data-target="#myModal" >기업사용자</a></li>
@@ -16,7 +25,7 @@
         		    <div class="col-md-offset-4 col-md-4">
         		        <!--<img class="intro_logo" src="https://attach.s.op.gg/logo/20170213140201.7afd04243fd9e93afe005ca49d89d21e.png" title="탈것" alt="OP.GG Logo (탈것)">
         		        -->
-        		        <a href ="/??"><img class = "intro_logo" src = "/logo-03.png"></a>
+        		        <a href ="/"><img class = "intro_logo" src = "/logo-03.png"></a>
         		    </div>
 		        </h1>
 		    </div>
